3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for SVN:

Fix a crash due to non-checking of parameters.
 socket/item.c
Ryo 2006-12-13

Tentative fix for bug #1551398: Curse spell breaks customized monsters.
The server will now create a "temporary" archetype when loading a customized monster.
This archetype will have the same name, but not be part of regular archetype list.
It'll be removed when last object using it is removed.
A new field "reference_count" is added to archetype structure, to store how many
objects reference that temporary archetype (think of item duplication with customized archetype).
This fix has been roughly tested, but could certainly use more tests.
Modified files:
 common/loader.l: handle customized monsters
 common/object.c: increment reference_count if copying a temporary archetype. Decrement it when freeing an
  object, and free archetype if needed
 common/treasure.c: add "artifact_init" to signal start/end of artifact loading, required for temporary archetypes handling.
 include/object.h: new "reference_count" field
Ryo 2006-12-09

Tentative fix for bugs
 #1605033: Random map gets blocked
 #1522796: Random map, locked door(s) and no key
Random map generator will try harder to put keys, and not lock if no spot found
(can happen if chest is surrounded by locked doors blocking the corridor).
Modified files:
 random_maps/rproto.h
 random_maps/treasures.c
Ryo 2006-12-03

Cosmetic fixes only, before bugfix.
 random_maps/treasures.c: fix indentation.
Ryo 2006-12-03

Fix for bug #1556723: Broken Show invisible - scrolls, wands, staves and rods
 server/spell_effect.c: use the item's level, and not computed level, to see if should be shown.
Ryo 2006-12-03
