@@ -360,171 +360,3 @@ command_function find_oldsocket_command2(char *cmd)
     return asp->func;
   return NULL;
 }
-
-#if 0
-/* find_command is only used by parse_string, so if parse_string
- * isn't needed, neither is find_command.  But parse_string
- * is only used by parse_command.
- * MSW 2006-06-02
- */
-
-static command_function find_command(char *cmd)
-{
-  command_array_struct *asp, dummy;
-  char *cp;
-
-  for (cp=cmd; *cp; cp++)
-    *cp =tolower(*cp);
-
-  dummy.name =cmd;
-  asp =(command_array_struct *)bsearch((void *)&dummy,
-			      (void *)Commands, CommandsSize,
-			      sizeof(command_array_struct), compare_A);
-  LOG(llevDebug, "Getting asp for command string %s\n", cmd);
-  if (asp)
-    return asp->func;
-  else
-  {
-    LOG(llevDebug, "Now we are here\n");
-    asp =(command_array_struct *)bsearch((void *)&dummy,
-      (void *)CommunicationCommands, CommunicationCommandSize,
-      sizeof(command_array_struct), compare_A);
-    if (asp)
-      return asp->func;
-    else
-      return NULL;
-  };
-}
-
-static command_function find_wizcommand(char *cmd)
-{
-  command_array_struct *asp, dummy;
-  char *cp;
-
-  for (cp=cmd; *cp; cp++)
-    *cp =tolower(*cp);
-
-  dummy.name =cmd;
-  asp =(command_array_struct *)bsearch((void *)&dummy,
-			      (void *)WizCommands, WizCommandsSize,
-			      sizeof(command_array_struct), compare_A);
-  if (asp)
-    return asp->func;
-  return NULL;
-}
-
-/* parse_string is only used by parse_command, so if parse_command
- * isn't needed, neither is parse_string
- * MSW 2006-06-02
- */
-
-/**
- * parse_string may be called from a player in the game or from a socket
- * (op is NULL if it's a socket).
- * It returnes 1 if it recognized the command, otherwise 0.
- * Actually return value is used as can-repeat -flag
- */
-
-static int parse_string(object *op, char *str)
-{
-    command_function f;
-    char *cp;
-    command_array_struct *asp;
-
-#ifdef INPUT_DEBUG
-    LOG(llevDebug, "Command: '%s'\n", str);
-#endif
-    /*
-     * remove trailing spaces
-     */
-    cp = str+strlen(str)-1;
-    while ( (cp>=str) && (*cp==' ')){
-        *cp='\0';
-	cp--;
-    }
-    /*
-     * No arguments?
-     */
-    if (!(cp=strchr(str, ' '))) {
-	/* GROS - If we are here, then maybe this is a plugin-provided command ? */
-	asp = find_plugin_command(str, op);
-	if (asp)
-	    return asp->func(op, NULL);
-
-	if ((f=find_command(str)))
-	    return f(op, NULL);
-	if (QUERY_FLAG(op,FLAG_WIZ) && (f=find_wizcommand(str)))
-	    return f(op, NULL);
-
-	if(op) {
-	    draw_ext_info(NDI_UNIQUE, 0,op, MSG_TYPE_COMMAND, MSG_TYPE_COMMAND_ERROR,
-			  "Unknown command.  Try help.", NULL);
-	}
-	return 0;
-    }
-
-    /*
-     * Command with some arguments
-     */
-
-    *(cp++) ='\0';
-    /* Clear all spaces from the start of the optional argument */
-    while (*cp==' ') cp++;
-
-    asp = find_plugin_command(str,op);
-    if (asp) return asp->func(op,cp);
-
-    if ((f=find_command(str)))
-	return f(op, cp);
-    if (QUERY_FLAG(op, FLAG_WIZ) && (f=find_wizcommand(str)))
-	return f(op, cp);
-
-    if(op) {
-	draw_ext_info(NDI_UNIQUE, 0,op, MSG_TYPE_COMMAND, MSG_TYPE_COMMAND_ERROR,
-		      "Unknown command.  Try help.", NULL);
-    }
-    return 0;
-}
-
-
-/* Parse command is no longer used - should probably be removed.
- * MSW 2006-06-02
- */
-
-/**  this function handles splitting up a ; separated
- *  compound command into sub-commands:  it is recursive.
- */
-static int parse_command(object *op, char *str) {
-  char *tmp,*tmp2;
-  int i;
-  /* if it's a keybinding command, ignore semicolons */
-  if(strstr(str,"bind")) return parse_string(op,str);
-  LOG(llevDebug, "parsin command '%s'\n", str);
-  /* If on a socket, you can not do complex commands. */
-  if(op && (tmp=strchr(str,';'))!=NULL)  /* we've found a ';' do the 1st and recurse */
-	 {
-	    char buf[MAX_BUF];
-		/* copy 1st command into buf */
-		/* Even if tmp2 points the the input_buf, this should still
-		 * be safe operation.
-		 */
-		for(i=0,tmp2=str;tmp2!=tmp;i++,tmp2++) 
-		    buf[i]= (*tmp2);
-		buf[i]='\0'; /* null terminate the copy*/
-		strncpy(op->contr->input_buf,tmp2+1, MAX_BUF);
-		op->contr->input_buf[MAX_BUF-1]=0;
-		parse_string(op,buf);
-	 }
-  else {
-	/* We need to set the input_buf to 0 so clear any complex keybinding
-	 * there might be.  However, str can be a pointer to input_buf in
-	 * the case of a complex keybinding.  So first we process the command,
-	 * clear the buffer, and then return the value.
-	 */
-	i=parse_string(op,str);
-	if (op) op->contr->input_buf[0]=0;
-	return i;
-  }
-  return 0;
-}
-#endif
